Fix random ipv6 address generation, rewrite setInet6NetworkPrefix javadoc and make it parse from String instead of int[]